applier/build/5pi-home.jsonnet.test-args/ingress/ingress_nginx/ingress-nginx-namespace.yaml
"apiVersion": "v1"
"kind": "Namespace"
"metadata":
  "labels":
    "app.kubernetes.io/instance": "ingress-nginx"
    "app.kubernetes.io/name": "ingress-nginx"
  "name": "ingress-nginx"
