applier/build/5pi-home.jsonnet.test-args/ingress/ingress_nginx/ingress-nginx-controller-admission-service.yaml
"apiVersion": "v1"
"kind": "Service"
"metadata":
  "labels":
    "app.kubernetes.io/component": "controller"
    "app.kubernetes.io/instance": "ingress-nginx"
    "app.kubernetes.io/managed-by": "Helm"
    "app.kubernetes.io/name": "ingress-nginx"
    "app.kubernetes.io/version": "0.44.0"
    "helm.sh/chart": "ingress-nginx-3.23.0"
  "name": "ingress-nginx-controller-admission"
  "namespace": "ingress-nginx"
"spec":
  "ports":
  - "name": "https-webhook"
    "port": 443
    "targetPort": "webhook"
  "selector":
    "app.kubernetes.io/component": "controller"
    "app.kubernetes.io/instance": "ingress-nginx"
    "app.kubernetes.io/name": "ingress-nginx"
  "type": "ClusterIP"
