applier/build/5pi-home.jsonnet.test-args/ingress/ingress_nginx/ingress-nginx-controller-service.yaml
"apiVersion": "v1"
"kind": "Service"
"metadata":
  "annotations": null
  "labels":
    "app.kubernetes.io/component": "controller"
    "app.kubernetes.io/instance": "ingress-nginx"
    "app.kubernetes.io/managed-by": "Helm"
    "app.kubernetes.io/name": "ingress-nginx"
    "app.kubernetes.io/version": "0.44.0"
    "helm.sh/chart": "ingress-nginx-3.23.0"
  "name": "ingress-nginx-controller"
  "namespace": "ingress-nginx"
"spec":
  "ports":
  - "name": "http"
    "port": 80
    "protocol": "TCP"
    "targetPort": "http"
  - "name": "https"
    "port": 443
    "protocol": "TCP"
    "targetPort": "https"
  "selector":
    "app.kubernetes.io/component": "controller"
    "app.kubernetes.io/instance": "ingress-nginx"
    "app.kubernetes.io/name": "ingress-nginx"
  "type": "NodePort"
